# PlaneFlies

./: CMakeLists.txt  LICENSE  README.md
include/: StructClass.h  function.h
lib/pkgconfig/: sdl3-image.pc
src/: function.c  main.c
